yaml_parser/tests/fail/double-quoted-string-without-closing-quote.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 29
  |
2 | key: "missing closing quote
  |                             ^
expected `"`
